@@ -10,3 +10,5 @@ copyright_year   = 2011
 -remove = MakeMaker
 [@LEONT::Base]
 [ModuleBuildTiny]
+[Prereqs]
+Module::Build::Tiny = 0.011
